# manual-downloader

./: .gitignore  .markdownlint.json  LICENSE  README.md  pyproject.toml
manual_downloader/: __main__.py
