[tool.poetry]
name = "manual-downloader"
version = "0.1.0"
description = ""
authors = ["Nick Perkins <nick@nickperkins.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
